[package]
name = "ucum"
description = "Implementation of the Unified Code for Units of Measures (UCUM)"
version = "0.1.0"
authors = ["Pierre-Antoine Champin <pchampin@liris.cnrs.fr>"]
edition = "2018"
repository = "https://github.com/pchampin/ucum_rs"
documentation = "https://docs.rs/ucum"
readme = "./README.md"
license = "CECILL-B"
keywords = ["ucum", "unit", "measure", "parser"]

[dependencies]

[dev-dependencies]
test-case = "1.0.0"
